tests/lean/def2.lean.expected.out
def2.lean:4:0: error: definition 'foo' is noncomputable, it depends on 'val'
def2.lean:10:0: error: definition 'bla' was incorrectly marked as noncomputable
